modified screen sharing resolutions. can now share at full resolution even for ultra high-resolution screens/windows.
Former-commit-id: 77327338b398364ab44e6859254462fd1ce88c08

--- a/public_HTTPS/sagePointerApp.html
+++ b/public_HTTPS/sagePointerApp.html
@@ -198,10 +198,10 @@
         	
         	<label class="sageLabel">Screen resolution:</label>
 			<select id="screenShareResolution">
-				<option value="360">360p</option>
-				<option value="480">480p</option>
-				<option value="720">720p</option>
-				<option value="1080" selected="selected">1080p</option>
+				<option>Low</option>
+				<option>Medium</option>
+				<option>High</option>
+				<option selected="selected">Full</option>
 			</select><br />
 			<label class="sageLabel">Frame quality:</label>
 			<input id="screenShareQuality" type="range" name="quality" min="1" max="10" step="1" value="5" style="width:100px;">
