--- a/public_HTTPS/sageUI.html
+++ b/public_HTTPS/sageUI.html
@@ -567,10 +567,10 @@
 				<button id="screenShareBtn" type="button">Share Screen</button>
 				<label class="sageLabel">Screen resolution:</label>
 				<select id="screenShareResolution">
-					<option value="360">360p</option>
-					<option value="480">480p</option>
-					<option value="720">720p</option>
-					<option value="1080" selected="selected">1080p</option>
+					<option>Low</option>
+					<option>Medium</option>
+					<option>High</option>
+					<option selected="selected">Full</option>
 				</select>
 				<label class="sageLabel">Frame quality:</label>
 				<input id="screenShareQuality" type="range" name="quality" min="1" max="10" step="1" value="5" style="width:100px;">
