NEW: Radial menu movable, toggles between window and interaction mode.
Former-commit-id: fb68b7f588fcae8969045bf7987807b8d1d722b7

--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -220,6 +220,7 @@
 		
 		wsio.on('radialMenuEvent', function(menu_data){
 			ui.updateRadialMenu(menu_data);
+			resetIdle();
         });
 		
 		wsio.on('updateMediaStreamFrame', function(data) {
