--- a/public_HTTPS/index.html
+++ b/public_HTTPS/index.html
@@ -219,9 +219,15 @@
         });
 		
 		wsio.on('radialMenuEvent', function(menu_data){
+			ui.radialMenuEvent(menu_data);
+			resetIdle();
+        });
+		
+		wsio.on('updateRadialMenu', function(menu_data){
 			ui.updateRadialMenu(menu_data);
 			resetIdle();
         });
+		
 		
 		wsio.on('updateMediaStreamFrame', function(data) {
 			wsio.emit('receivedMediaStreamFrame', {id: data.id});
